Fix dark mode for Differential Paths Panel divider
Summary:
Replace hardcoded background color `#f5f5f5` for the Differential vertical divider (`.phui-formation-resizer`) between the Paths Panel and the actual revision in Differential with variable `{$lightgreybackground}` which is `#f7f7f7` in default mode. That is the same color that the adjacent sidebar (`.phui-flank-view-fixed`) already uses, and I consider the small difference in grey neglectable.

Refs T15056

Test Plan:
* Go to http://phorge.localhost/settings/panel/display/ and set `Accessibility` to `Dark Mode (Experimental)`
* Create a Differential revision
* Go to http://phorge.localhost/D1
* In the left upper corner, click that arrow thingie to Show Paths Panel
* Look at the vertical divider

Reviewers: O1 Blessed Committers, mainframe98

Reviewed By: O1 Blessed Committers, mainframe98

Subscribers: tobiaswiese, valerio.bozzolan, Matthew, Cigaryno

Maniphest Tasks: T15056

Differential Revision: https://we.phorge.it/D26164

--- a/webroot/rsrc/css/phui/phui-formation-view.css
+++ b/webroot/rsrc/css/phui/phui-formation-view.css
@@ -114,7 +114,7 @@
   bottom: 0;
 
   cursor: col-resize;
-  background: #f5f5f5;
+  background: {$lightgreybackground};
   border-style: solid;
   border-width: 0 1px 0 1px;
   border-color: #fff #999c9e #fff #999c9e;
